--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,22 @@
     top: calc(50vh - 150px);
     left: calc(50vw - 150px);
 }
+#settings-page{
+    display: grid;
+    grid-template-rows: auto;
+    margin-top: 6em;
+    margin-left: 1em;
+}
+.employees-settings{
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    
+    width: 600px;
+    grid-gap: 1em;
+}
+.sync-shop{
+    margin-top: 1em;
+    display: grid;
+    grid-gap:1em;
+    padding: 10px;
+}
