--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
-body {
-  background-color: #3b3c43;
+:root {
+  --light-grey: #b6b6bf;
+  --medium-grey: #615a62;
+  --dark-grey: #3b3c43;
+  --box-shadow: rgba(0, 0, 0, 0.3);
 }
-.stage::-webkit-scrollbar {
-    display: none;
-  }
+body {
+  background-color: var(--dark-grey);
+}
 
 #order-manager-page {
     padding-top: 70px;
@@ -17,21 +20,20 @@ body {
 }
 
 .stage {
-    background-color: #615a62;
-    height: fit-content;
-    border-radius: 5px;
-    max-height: 80vh;
-    overflow: scroll;
+  background-color: var(--medium-grey);
+  height: fit-content;
+  border-radius: 5px;
+  max-height: 80vh;
+  overflow: scroll;
 }
-
 .stage::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
 #details-window {
   position: absolute;
   z-index: 2;
-  background-color: lightgrey;
+  background-color: var(--light-grey);
   border-radius: 5px;
   top: calc(50vh - 150px);
   left: calc(50vw - 150px);
@@ -58,7 +60,7 @@ body {
   padding: 0;
 }
 .MuiToolbar-regular {
-  background-color: #615a62;
+  background-color: var(--medium-grey);
 }
 .MuiIconButton-edgeStart {
   color: white;
@@ -77,7 +79,7 @@ body {
   padding: 0;
 }
 .activeStep .MuiPaper-root {
-  background-color: rgba(0, 0, 0, 0);
+  background-color: transparent;
 }
 .MuiInputBase-input {
   color: white;
@@ -87,13 +89,14 @@ body {
   width: 22px;
   border-radius: 50%;
   margin-right: 15px;
-  box-shadow: inset 1px 1px 6px rgba(0, 0, 0, 0.6);
+  box-shadow: inset 1px 1px 6px var(--box-shadow);
 }
 #settings-page {
-  background-color: #615a62;
+  background-color: var(--medium-grey);
   margin: 100px 40px;
   padding: 30px;
   border-radius: 10px;
+  box-shadow: 2px 2px 20px var(--box-shadow);
 }
 .MuiInputLabel-formControl {
   position: absolute;
@@ -128,11 +131,12 @@ body {
 .tracker_page {
   display: grid;
   grid-gap: 20px;
-  padding: 100px;
+  padding: 70px;
   margin: 100px 120px;
   text-align: center;
-  background-color: #615a62;
+  background-color: var(--medium-grey);
   border-radius: 10px;
+  box-shadow: 2px 2px 20px var(--box-shadow);
 }
 #trackButton {
   width: 300px;
@@ -150,15 +154,31 @@ body {
   text-align: center;
   padding: 0;
   width: 100%;
-  /* color: white; */
-  background-color: #b6b6bf;
-  box-shadow: 2px 8px 8px rgba(0, 0, 0, 0.3);
+  background-color: var(--light-grey);
+  box-shadow: 2px 5px 5px var(--box-shadow);
 }
 .sync-input {
   margin: 4px;
   width: 250px;
 }
-#storeSynced{
-    margin-left: 50px;
-    color: greenyellow;
+#storeSynced {
+  margin-left: 50px;
+  color: greenyellow;
+}
+.MuiStepIcon-root.MuiStepIcon-completed {
+  color: white;
+}
+.MuiStepIcon-root.MuiStepIcon-active {
+  color: #7ea016;
+}
+.MuiFormLabel-root.Mui-focused {
+  color: black;
+}
+#details-window {
+  position: fixed;
+  left: calc(33% - 25px);
+  top: 15%;
+  width: 33%;
+  padding: 50px;
+  background-color: var(--light-grey);
 }
