--- a/src/App.css
+++ b/src/App.css
@@ -14,9 +14,9 @@ body {
 
 #stages-container {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    /* grid-template-columns: repeat(6, 1fr); */
     grid-gap: 10px;
-    margin: 10px;
+    /* margin: 10px; */
 }
 
 .stage {
