--- a/src/styles/CompletedOrders.css
+++ b/src/styles/CompletedOrders.css
@@ -1,5 +1,5 @@
 #completed-orders-page {
-    background-color: #615a62;
+    /* background-color: #615a62; */
     margin: 100px 40px;
     border-radius: 10px;
     min-height: 65vh;
