--- a/src/styles/ShippingOrders.css
+++ b/src/styles/ShippingOrders.css
@@ -1,24 +1,38 @@
 .order-item{
     display: flex;
-    padding:10px 15px;
-    margin-right: 15px;
+    /* padding:10px 15px; */
+    margin-bottom: 15px;
 }
 
-.panel-header {
+.shipping-order-panel{
+    margin: 5px 0;
+    box-shadow: 0 4px 8px 0 #00000073;
+    border-left: 6px solid red;
+    border-radius: 6px;
+}
+
+.shipping-order-panel.ready{
+    border-left: 6px solid greenyellow;
+}
+
+.shipping-panel-header {
     display: grid;
     grid-template-columns: repeat(3,1fr);
     width: -webkit-fill-available;
     text-align: center;
+    font-weight: bold;
 }
 
 .shipping-order-info {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    
 }
 
-.statusLight {
+.order-item .statusLight {
     background-color: #f34627;
     margin-right: 10px;
+    height:15px;
+    width:15px;
+    margin-top:5px;
 }
 
 .ready .statusLight {
@@ -29,23 +43,34 @@
     margin : 0;
 }
 
+.shipping-panel-details{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    justify-items: center;
+}
+
 .panel-details > h4{
     margin: 5px;
 }
 
 .shipping-details {
-    display: grid;
-    grid-template-rows: repeat(2,1fr);
-    grid-template-columns: repeat(5,1fr);
+    display: flex;
     text-align: center;
+    flex-wrap: wrap;
+}
+
+.shipping-details p {
+    margin-right: 5px;
 }
 
 .all-order-items{
-    display: flex;
-    margin: 5px 0;
+    /* display: flex; */
+    /* margin: 5px 0; */
 }
 
 .buttons {
-    display: flex;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-gap:10px;
     padding:10px 15px;
 }
