moved logout to settings

--- a/src/styles/ShippingOrders.css
+++ b/src/styles/ShippingOrders.css
@@ -47,6 +47,7 @@
     display: grid;
     grid-template-columns: repeat(4,1fr);
     justify-items: center;
+    align-items: center;
 }
 
 .panel-details > h4{
