--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,9 @@
 .MuiToolbar-regular {
   min-height: 45px;
 }
+#order-manager-page {
+  padding-top: 45px;
+}
 #stages-container {
   display: grid;
   grid-gap: 10px;
@@ -15,13 +18,6 @@
 .stage::-webkit-scrollbar {
   display: none;
 }
-#details-window {
-  position: absolute;
-  z-index: 2;
-  border-radius: 5px;
-  top: calc(50vh - 150px);
-  left: calc(50vw - 150px);
-}
 .order-card-header {
   display: flex;
   flex-wrap: wrap;
@@ -29,37 +25,19 @@
 .order-card-header > h3 {
   margin-right: 10px;
 }
-
-.order h3 {
-  margin: 0;
-  font-size: 18px;
-  margin-right: 10px;
-}
-.order p {
-  display: block;
-  margin: 0;
-}
-
 .ready .statusLight {
   background-color: greenyellow;
-}
-#details-window > h3 {
-  margin-top: 10px;
-  text-align: center;
 }
 .statusLight {
   height: 22px;
   width: 22px;
   border-radius: 50%;
   margin-right: 15px;
-  /* box-shadow: inset 1px 1px 6px var(--box-shadow); */
 }
 #settings-page {
-  /* background-color: var(--medium-grey); */
   margin: 100px 40px;
   padding: 30px;
   border-radius: 10px;
-  /* box-shadow: 2px 2px 20px var(--box-shadow); */
 }
 .popper {
   margin-top: 15px;
@@ -81,19 +59,13 @@
   margin-top: 10px;
   text-align: center;
 }
-
-/* .order-card-details {
-  font-weight: bold;
-} */
 .tracker_page {
   display: grid;
   grid-gap: 20px;
   padding: 70px;
   margin: 100px 120px;
   text-align: center;
-  /* background-color: var(--medium-grey); */
   border-radius: 10px;
-  /* box-shadow: 2px 2px 20px var(--box-shadow); */
 }
 #trackButton {
   width: 300px;
@@ -107,7 +79,16 @@
   text-align: center;
   padding: 0;
   width: 100%;
-  border-left: #3FD6BC 4px solid;
+  border-left: #3fd6bc 4px solid;
+}
+.order h3 {
+  margin: 0;
+  font-size: 16px;
+  margin-right: 10px;
+}
+.order p {
+  display: block;
+  margin: 0;
 }
 .inProcess {
   border-left: rgb(214, 63, 96) 4px solid;
@@ -126,7 +107,9 @@
   top: 15%;
   width: 33%;
   padding: 50px;
-  /* background-color: var(--light-grey); */
+}
+#details-window:focus {
+  outline: none;
 }
 #createBoard .MuiListItem-root {
   display: grid;
@@ -153,37 +136,17 @@
   height: 8;
   height: 50vh;
 }
-/* #addNewStage {
-  background-color: transparent;
-  border: none;
-  font-size: 30px;
-  color: var(--light-grey);
-  box-shadow: none;
-  text-align: center;
-  cursor: pointer;
-} */
-#createBoard {
-  /* background-color: var(--light-grey); */
-  border-radius: 10px;
-  /* box-shadow: 2px 2px 20px var(--box-shadow); */
-}
 .stageBox {
   display: grid;
-  /* background-color: var(--light-grey); */
   text-align: center;
   padding: 0;
-  /* background-color: var(--light-grey); */
-  /* box-shadow: 2px 5px 5px var(--box-shadow); */
-  border-radius: 5px;
   height: fit-content;
   min-height: 30%;
   align-items: center;
   cursor: pointer;
 }
 #newStage {
-  /* background-color: var(--medium-grey); */
   padding: 100px;
-  border-radius: 10px;
 }
 .newStagesContainer {
   display: grid;
@@ -192,7 +155,4 @@
 }
 .MuiStepIcon-root.MuiStepIcon-active {
   color: rgb(14, 136, 79);
-}
-.MuiStepIcon-root.MuiStepIcon-completed {
-  /* color: var(--light-grey); */
 }
