--- a/src/styles/ShippingOrders.css
+++ b/src/styles/ShippingOrders.css
@@ -1,3 +1,12 @@
+#shipping-orders-page {
+    /* background-color: #615a62; */
+    margin: 80px 0px;
+    border-radius: 10px;
+    min-height: 65vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .order-item{
     display: flex;
     /* padding:10px 15px; */
