--- a/src/styles/Settings.css
+++ b/src/styles/Settings.css
@@ -1,5 +1,4 @@
 #settings-page {
-    background-color: #323840;
     padding: 30px;
     border-left: 4px solid #3fd6bc;
     width: fit-content;
@@ -10,6 +9,7 @@
     right: 0;
     top: 0;
     bottom: 0;
+    box-shadow: 0 4px 8px 8px #00000014;
 }
 
 #settings-page .MuiButton-root{
@@ -35,5 +35,5 @@
   }
   #storeSynced {
     margin-left: 50px;
-    color: greenyellow;
+    color: #3fd6bc;
   }
