--- a/src/styles/ShippingOrders.css
+++ b/src/styles/ShippingOrders.css
@@ -77,5 +77,13 @@
 }
 
 #shipping-modal {
-    padding:100px;
+    padding: 5%;
+    position: fixed;
+    display: flex;
+    top: 30%;
+    flex-direction: column;
+}
+
+#shipping-modal > div {
+    margin-bottom: 10px;
 }
