--- a/src/styles/OrderManager.css
+++ b/src/styles/OrderManager.css
@@ -28,7 +28,6 @@
 .MuiList-padding {
   padding: 5px 0;
 }
-
 .stage::-webkit-scrollbar {
   display: none;
 }
@@ -79,36 +78,44 @@ h5 {
 }
 #addStagesContainer {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   margin: 0 auto;
 }
 .navButtons {
   height: fit-content;
-  justify-self: center;
   display: grid;
-  width: 150px;
+  grid-template-columns: repeat(2,1fr);
 }
 .newBoardContainer {
-  display: grid;
-  grid-gap: 10px;
-  height: 8;
+  /* display: grid; */
+  /* grid-gap: 10px; */
+  /* height: 8; */
   height: 50vh;
 }
 .stageBox {
-  display: grid;
   text-align: center;
-  padding: 0;
+  padding: 11px 10px;
+  width: 100%;
   height: fit-content;
-  min-height: 30%;
-  align-items: center;
-  cursor: pointer;
 }
 #newStage {
   padding: 100px;
 }
-.newStagesContainer {
+.newStageHeader {
+  padding-left: 10px;
+  text-align: start;
+}
+.newStageDetails {
+  padding: 0;
+  padding-left: 10px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  text-align: start;
+  margin-bottom: 5px;
+}
+.newStagesContainer {
+  margin-top: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-gap: 10px;
 }
 .taskModal {
@@ -117,12 +124,15 @@ h5 {
 }
 #details-window {
   position: fixed;
+  top: 20%;
   right: 0;
   left: 0;
   margin-right: auto;
   margin-left: auto;
-  min-height: 250px;
-  width: 30%;
+  min-height: 280px;
+  padding: 25px;
+  width: 35%;
+  text-align: center;
 }
 #details-window:focus {
   outline: none;
@@ -130,12 +140,66 @@ h5 {
 #claimButton {
   margin-top: 20px;
 }
-#details-window h3 h4 h5 {
+h3 {
   margin: 0;
   margin-top: 10px;
-  text-align: center;
+}
+h4 {
+  margin: 0;
+  margin-top: 10px;
+}
+h5 {
+  margin: 0;
+}
+h6 {
+  padding-left: 10px;
+  margin: 0;
 }
 #product-details {
   display: grid;
   text-align: center;
+}
+.MuiTab-root {
+  padding: 12px 16px;
+}
+#createBoard {
+  display: grid;
+  justify-items: center;
+  top: 20%;
+  right: 0;
+  left: 0;
+  margin-right: auto;
+  margin-left: auto;
+  min-height: 280px;
+  padding: 25px;
+  width: 60%;
+}
+#createBoard .MuiInputBase-input {
+  width: 300px;
+  color: white;
+}
+#createBoard
+  .MuiAutocomplete-root.MuiAutocomplete-hasClearIcon.MuiAutocomplete-hasPopupIcon {
+  max-width: 300px;
+}
+#nextStep {
+  height: fit-content;
+  padding: 5px 15px;
+}
+#addNewStage {
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  max-height: 80px;
+}
+.MuiExpansionPanel-root.Mui-expanded {
+  margin: 0;
+}
+.addStageBtn {
+  width: 150px;
+  justify-self: end;
+}
+.saveBoard {
+  width: fit-content;
+  /* justify-self: end; */
 }
