--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ html {
   padding: 70px;
   margin: 100px 120px;
   text-align: center;
-  border-radius: 10px;
+  border-left: 4px solid #3FD6BC;
 }
 #trackButton {
   width: 300px;
