--- a/src/styles/Settings.css
+++ b/src/styles/Settings.css
@@ -34,15 +34,15 @@
     width: 250px;
   }
   #storeSynced {
-    margin-left: 50px;
+    margin-left: 6%;
     color: #3fd6bc;
   }
 
   .shop-details {
-    margin-left: 8%;
+    margin-left: 4%;
   }
 
   #logout-btn{
-    margin-left:20px;
-    background-color: #e64166;;
+    margin-left:330px;
+    color:#e64166;
   }
