--- a/src/styles/OrderManager.css
+++ b/src/styles/OrderManager.css
@@ -84,7 +84,7 @@ h5 {
 .navButtons {
   height: fit-content;
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
 }
 .newBoardContainer {
   /* display: grid; */
@@ -166,14 +166,16 @@ h6 {
 #createBoard {
   display: grid;
   justify-items: center;
-  top: 20%;
+  margin-top: 80px;
   right: 0;
   left: 0;
   margin-right: auto;
   margin-left: auto;
-  min-height: 280px;
+  min-height: 300px;
   padding: 25px;
+  padding-top: 60px;
   width: 60%;
+  border-left: #3fd6bc 4px solid;
 }
 #createBoard .MuiInputBase-input {
   width: 300px;
@@ -211,7 +213,7 @@ h6 {
 }
 
 #stageNameInput-item {
-  margin-left:34px;
+  margin-left: 34px;
 }
 
 #newStage .popup {
